styling and added about page

--- a/index.html
+++ b/index.html
@@ -10,23 +10,25 @@
 
   <body>
     <header class="main-head">
-      <div id="name-wrapper">
-        <div id="name">Joe's Test Site</div>
+      <div class="head-wrapper">
+        <div class="name-wrapper">
+          <div class="name">Joe's Test Site</div>
+        </div>
+
+        <label for="toggle-1" class="toggle-menu"><ul><li></li> <li></li> <li></li></ul></label>
+        <input type="checkbox" id="toggle-1">
+
+        <nav>
+          <ul>
+            <li id="home"><a href="#">Home</a></li>
+            <li id="about"><a href="./about.html">About</a></li>
+            <li id="contact"><a href="./contact.html">Contact</a></li>
+          </ul>
+        </nav>
       </div>
-
-      <label for="toggle-1" class="toggle-menu"><ul><li></li> <li></li> <li></li></ul></label>
-      <input type="checkbox" id="toggle-1">
-
-      <nav>
-        <ul>
-          <li id="home">Home</li>
-          <li id="about">About</li>
-          <li id="contact">Contact</li>
-        </ul>
-      </nav>
     </header>
 
-    <section id="main-sect">
+    <section class="main-sect">
       <article class="left-art">
         <h1>Left Article</h1>
         <p>
