styling for header links

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <header class="main-head">
       <div class="head-wrapper">
         <div class="name-wrapper">
-          <div class="name">Joe's Test Site</div>
+          <div class="name"><a href="./index.html">Joe's Test Site</a></div>
         </div>
 
         <label for="toggle-1" class="toggle-menu"><ul><li></li> <li></li> <li></li></ul></label>
@@ -20,9 +20,9 @@
 
         <nav>
           <ul>
-            <li id="home">Home</li>
-            <li id="about">About</li>
-            <li id="contact">Contact</li>
+              <li id="home"><a href="./index.html">Home</a></li>
+              <li id="about"><a href="#">About</a></li>
+              <li id="contact"><a href="./contact.html">Contact</a></li>
           </ul>
         </nav>
       </div>
