--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="main-head">
       <div class="head-wrapper">
         <div class="name-wrapper">
-          <div class="name">Joe's Test Site</div>
+          <div class="name"><a href="#">Joe's Test Site</a></div>
         </div>
 
         <label for="toggle-1" class="toggle-menu"><ul><li></li> <li></li> <li></li></ul></label>
