--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </p>
       </article>
 
-      <div class="clear-fix"></div>
+      <div class="clearfix"></div>
 
       <article class="bottom-art">
           <h1>Bottom Article</h1>
